// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate routes for example project 1`] = `
"
location ~ ^/(?:/)?$ {
    try_files /index.html /index.html;
}

location ~ ^/hello(?:/)?$ {
    try_files /hello.html /index.html;
}

location ~ ^/hello/world(?:/)?$ {
    try_files /hello/world.html /index.html;
}

location ~ ^/([^/]+?)(?:/)?$ {
    try_files /[foo].html /index.html;
}

location ~ ^/([^/]+?)/([^/]+?)/hello(?:/)?$ {
    try_files /[foo]/[bar]/hello.html /index.html;
}

location ~ ^/([^/]+?)/([^/]+?)/([^/]+?)(?:/)?$ {
    try_files /[foo]/[bar]/[id].html /index.html;
}"
`;

exports[`generate routes for example project with custom basePath 1`] = `
"
location ~ ^/baz(?:/)?$ {
    try_files /index.html /index.html;
}

location ~ ^/baz/hello(?:/)?$ {
    try_files /hello.html /index.html;
}

location ~ ^/baz/hello/world(?:/)?$ {
    try_files /hello/world.html /index.html;
}

location ~ ^/baz/([^/]+?)(?:/)?$ {
    try_files /[foo].html /index.html;
}

location ~ ^/baz/([^/]+?)/([^/]+?)/hello(?:/)?$ {
    try_files /[foo]/[bar]/hello.html /index.html;
}

location ~ ^/baz/([^/]+?)/([^/]+?)/([^/]+?)(?:/)?$ {
    try_files /[foo]/[bar]/[id].html /index.html;
}"
`;

exports[`generate routes for example project with trailingSlash enabled 1`] = `
"
location ~ ^/(?:/)?$ {
    try_files /index.html /index.html;
}

location ~ ^/hello(?:/)?$ {
    try_files /hello.html /index.html;
}

location ~ ^/hello/world(?:/)?$ {
    try_files /hello/world.html /index.html;
}

location ~ ^/([^/]+?)(?:/)?$ {
    try_files /[foo].html /index.html;
}

location ~ ^/([^/]+?)/([^/]+?)/hello(?:/)?$ {
    try_files /[foo]/[bar]/hello.html /index.html;
}

location ~ ^/([^/]+?)/([^/]+?)/([^/]+?)(?:/)?$ {
    try_files /[foo]/[bar]/[id].html /index.html;
}"
`;
